HelloUltraviolet/Fixtures/RejectedSource/Keys/SpeculativeFence/Source/Main.uv
//! Rejected key-system specimen for a fence expression inside speculative execution.

public procedure speculativeFenceReference() -> i32 {
    var shared_value: shared i32 = 1
    #shared_value speculative write {
        fence(acquire)
        shared_value = shared_value + 1
    }
    return 0
}
